--- a/.github/workflows/fetch.yml
+++ b/.github/workflows/fetch.yml
@@ -3,7 +3,10 @@ on:
   schedule:
     - cron: "5 6 * * *"   # her gün 06:05 UTC (TR ~09:05)
   workflow_dispatch:
-
+  
+permissions:
+  contents: write 
+  
 jobs:
   fetch:
     runs-on: ubuntu-latest
